# CallAI

./: .flutter-plugins-dependencies  .gitignore  README.md  pubspec.yaml
android/app/: build.gradle.kts  google-services.json
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  jni-wrapper.cpp
android/app/src/main/cpp/rnnoise/: _kiss_fft_guts.h  arch.h  common.c  common.h  denoise.c  kiss_fft.c  kiss_fft.h  pitch.c  pitch.h  rnn.c  rnn.h  rnn_data.h  rnnoise.h
android/app/src/main/kotlin/com/shailesh/callai/: CallConnectionService.kt  MainActivity.kt  PhoneAccountManager.kt  RNNoise.kt
assets/: sample_contacts.csv
lib/: main.dart
lib/screens/: agent_setup_screen.dart  calling_screen.dart  conversation_log_screen.dart  enhanced_calling_screen.dart  excel_upload_screen.dart  in_app_calling_screen.dart  login_screen.dart  phone_dialer_screen.dart  privacy_policy_screen.dart  profile_page.dart  user_info_screen.dart
lib/services/: analytic_service.dart  audio_service.dart  call_state_service.dart  calling_screen.dart  device_service.dart  firebase_service.dart  security_service.dart  speech_to_text_service.dart  wallet_service.dart
lib/widgets/: callai_logo.dart  wallet_widget.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
web/: index.html
windows/runner/: Runner.rc
